--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3028,7 +3028,7 @@
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/winter_back.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
@@ -3561,15 +3561,16 @@
 
 /* Main */
 
-	#main {
-		background-color: #ffffff;
-		position: relative;
-		margin: 0 auto;
-		width: calc(100% - 4rem);
-		max-width: 72rem;
-		z-index: 2;
-	}
-
+		#main {
+		    background-color: rgba(126,156,214,0.7);
+		    position: relative;
+		    color: #FFFFF;
+		    margin: 0 auto;
+		    border-radius: 30px;
+		    width: calc(100% - 4rem);
+		    max-width: 72rem;
+		    z-index: 2;
+		}
 		#main > * {
 			padding: 4rem 4rem 2rem 4rem ;
 			border-top: solid 2px #eeeeee;
